--- a/ReferencePage/Resources/styles.css
+++ b/ReferencePage/Resources/styles.css
@@ -132,4 +132,26 @@ h3 {
     color: #3c283d;
 }
 
+.container-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  /* min-height: 600px; */
+  width: auto;
+  /* max-width: 600px; */
+  border: 4px solid rgb(107, 205, 80);
+  flex-wrap: wrap;
+}
 
+.box {
+  max-width: 450px;
+  height: auto;
+  background-color: #9a8a7e;
+  color: #fff;
+  text-align: left;
+  padding: 8px;
+  margin: 8px;
+  border: 2px solid rgb(60, 87, 78);
+  border-radius: 8px;
+}
