--- a/ReferencePage/Resources/styles.css
+++ b/ReferencePage/Resources/styles.css
@@ -129,9 +129,9 @@ h3 {
     color: #3c283d;
 }
 
+/* flex container rules */
 .container-flex {
     display: flex;
-    /* flex-direction: column; */
     justify-content: space-evenly;
     align-items: center;
     width: 90%;
