--- a/ReferencePage/Resources/styles.css
+++ b/ReferencePage/Resources/styles.css
@@ -1,3 +1,5 @@
+/* Cheatsheet Project */
+
 * {
   font-family: Helvetica, Arial, sans-serif;
   box-sizing: border-box;
@@ -7,6 +9,7 @@ h1 {
   text-align: center;
   color: #3c283d;
   margin: 10px auto;
+  font-family: Lunasima, sans-serif;
 }
 
 .nav {
@@ -29,6 +32,7 @@ h1 {
 
 a {
   text-decoration: none;
+  font-family: Oswald;
 }
 nav li {
   list-style-type: none;
@@ -51,6 +55,7 @@ th[scope="col"] {
   background-color: #8b5e8c;
   padding: 6px;
   width: 120px;
+  font-family: Lunasima;
 }
 
 th[scope="row"] {
@@ -58,6 +63,7 @@ th[scope="row"] {
   background-color: #f1d6f2;
   padding: 6px;
   width: 120px;
+  font-family: Lunasima;
 }
 
 td {
@@ -71,16 +77,17 @@ caption {
   font-weight: 700;
   color: #3c283d;
   margin-bottom: 10px;
+  font-family: Oswald;
 }
 
 li {
   line-height: 25px;
 }
 
-.notes {
+/* .notes {
   margin: 20px auto;
   width: 90%;
-}
+} */
 
 .tableMain {
   margin: 20px auto;
@@ -117,46 +124,69 @@ button {
 /* Table properties for code snippet table */
 .snipL {
   vertical-align: top;
+  padding: auto;
 }
 
 .snipR {
   vertical-align: top;
+  padding: auto;
 }
 
 h3 {
-    margin-left: 44px;
-    margin-bottom: 10px;
-    color: #3c283d;
+  margin-left: 44px;
+  margin-bottom: 10px;
+  color: #3c283d;
+  font-family: Lunasima;
 }
 
-/* flex container rules */
 .container-flex {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 90%;
-    flex-wrap: wrap;
-    border: 2px solid #f17af5;
-    margin: 10px auto;
-    margin-bottom: 150px;
-  }
-  
-  .box {
-    max-width: 450px;
-    height: auto;
-    background-color: rgb(212, 211, 211);
-    color: #1e131e;
-    text-align: left;
-    padding: 8px;
-    margin: 8px;
-    border: 2px solid #8b5e8c;
-    border-radius: 8px;
-  }
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: space-evenly;
+  align-items: center;
+  width: 90%;
+  flex-wrap: wrap;
+  border: 2px solid #f17af5;
+  margin: 10px auto;
+  margin-bottom: 150px;
+}
 
-  h4 {
-    font-size: 16px;
-    font-weight: 700;
-    color: #3c283d;
-    text-align: center;
-    margin-bottom: 10px;
-  }
+.box {
+  max-width: 450px;
+  height: auto;
+  background-color: rgb(212, 211, 211);
+  color: #1e131e;
+  text-align: left;
+  padding: 8px;
+  margin: 8px;
+  border: 2px solid #8b5e8c;
+  border-radius: 8px;
+}
+
+h4 {
+  font-size: 16px;
+  font-weight: 700;
+  color: #3c283d;
+  text-align: center;
+  margin-bottom: 10px;
+  font-family: Oswald;
+}
+.lunasima-regular {
+  font-family: "Lunasima", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lunasima-bold {
+  font-family: "Lunasima", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+.oswald-bold {
+  font-family: "Oswald", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
